--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 :root {
-    --primary-color: #00BF63;
+    --primary-color: #f8f8f8;
     --secondary-color: #f8f8f8;
     --text-color: #333;
-    --dark-text-color: black;
+    --dark-text-color: #333;
     --light-text-color: #555;
     --white: #fff;
     --grey: #ddd;
     --hover-bg-color: #f8f8f8;
-    --header-bg-color: #00BF63;
+    --header-bg-color: #fff; /* Changed to white */
     --button-hover-bg-color: #028a3d;
     --navbar-hover-color: #028a3d;
 }
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -37,10 +38,37 @@ header {
     align-items: center;
 }
 
+.header-left img.logo {
+    height: 40px; /* Adjust the height as needed */
+    margin-right: 20px;
+}
+
 .header-center {
     flex: 1;
     display: flex;
+    align-items: center;
     justify-content: center;
+}
+
+.header-center input {
+    width: 70%;
+    padding: 10px 15px;
+    border-radius: 25px 0 0 25px;
+    border: 1px solid var(--grey);
+    border-right: none;
+    outline: none;
+    font-size: 16px;
+}
+
+.header-center .search-button {
+    padding: 10px 20px;
+    border-radius: 0 25px 25px 0;
+    border: 1px solid var(--grey);
+    border-left: none;
+    background-color: #f5671a;
+    color: var(--white);
+    cursor: pointer;
+    font-size: 16px;
 }
 
 .header-right {
@@ -48,35 +76,33 @@ header {
     align-items: center;
 }
 
-.header-left img.logo {
-    height: 50px;
-    margin-right: 20px;
+.header-icon i {
+    font-size: 24px;
+    color: var(--dark-text-color); /* Changed to black */
 }
 
-.header-center input {
-    width: 60%;
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px solid var(--grey);
-}
-
-.header-right .header-icon {
+.header-icon {
     background: none;
     border: none;
-    font-size: 24px;
-    margin-left: 20px;
     cursor: pointer;
-    color: var(--white);
+    margin-left: 10px;
 }
 
-.header-right .cart-icon {
-    height: 30px;
-    width: 30px;
+.announcement {
+    background-color: #28a745;
+    color: white;
+    text-align: center;
+    padding: 10px 0; /* Equal padding top and bottom */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
 }
 
 .navbar {
     background-color: var(--white);
     border-bottom: 1px solid var(--grey);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .navbar ul {
@@ -111,30 +137,37 @@ header {
     color: var(--primary-color);
 }
 
-nav ul li .sub-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: var(--white);
-    color: var(--primary-color);
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-}
-
-nav ul li:hover .sub-menu {
-    display: block;
-}
-
-.categories {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px 0;
-}
-
 main {
     padding: 30px;
+}
+
+.trending {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.trend-categories {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.trend-category {
+    text-align: center;
+    width: 150px;
+    margin: 20px;
+}
+
+.trend-category img {
+    border-radius: 50%;
+    width: 100%;
+    height: auto;
+}
+
+.recommended-products {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .product {
@@ -142,7 +175,7 @@ main {
     width: 23%;
     margin: 10px;
     padding: 20px;
-    border: 1px solid var (--grey);
+    border: 1px solid var(--grey);
     border-radius: 8px;
     background-color: var(--white);
     text-align: center;
@@ -165,13 +198,11 @@ main {
     font-size: 1.2em;
     margin: 15px 0;
     color: var(--text-color);
-    text-align: center;
 }
 
 .product p {
     margin: 10px 0;
     color: var(--light-text-color);
-    text-align: center;
 }
 
 .product button {
@@ -188,50 +219,7 @@ main {
     background-color: var(--button-hover-bg-color);
 }
 
-.cart-item {
-    border: 1px solid var(--grey);
-    padding: 15px;
-    margin: 15px 0;
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-    background-color: var(--white);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.cart-item img {
-    width: 60px;
-    height: 60px;
-    margin-right: 20px;
-    border-radius: 4px;
-}
-
-.cart-item h2 {
-    font-size: 1em;
-    margin: 0;
-    flex: 1;
-    color: var(--text-color);
-    text-align: center;
-}
-
-.cart-item p {
-    margin: 5px 0;
-    color: var(--light-text-color);
-    text-align: center;
-}
-
-.cart-item input[type="number"] {
-    width: 50px;
-    margin-right: 20px;
-    padding: 5px;
-    border: 1px solid var(--grey);
-    border-radius: 4px;
-}
-
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
     background-color: var(--primary-color);
     color: var(--white);
     text-align: center;
@@ -242,117 +230,4 @@ footer {
 footer p {
     margin: 0;
     font-weight: bold;
-}
-
-.product-details {
-    margin: 40px;
-}
-
-.product-details h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    color: var(--text-color);
-    text-align: center;
-}
-
-.product-images {
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px;
-    justify-content: center;
-}
-
-.product-images .main-image {
-    width: 600px;
-    height: 400px;
-    object-fit: cover;
-    margin-right: 30px;
-    border-radius: 8px;
-}
-
-.thumbnail-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.thumbnail-container img {
-    width: 100px;
-    height: 66px;
-    object-fit: cover;
-    margin-bottom: 15px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: transform 0.3s;
-}
-
-.thumbnail-container img:hover {
-    transform: scale(1.1);
-}
-
-.description {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-    color: var(--light-text-color);
-    text-align: center;
-}
-
-.price {
-    font-size: 2em;
-    color: green;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-button {
-    padding: 12px 25px;
-    font-size: 1em;
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: var(--button-hover-bg-color);
-}
-
-.product-reviews {
-    margin-top: 40px;
-}
-
-.product-reviews h2 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-    color: var(--text-color);
-    text-align: center;
-}
-
-.review {
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 15px;
-}
-
-.review p {
-    margin: 5px 0;
-    color: var (--light-text-color);
-    text-align: center;
-}
-
-.review strong {
-    color: var (--dark-text-color);
-}
-
-.additional-info {
-    margin-top: 40px;
-}
-
-.additional-info h2 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-    color: var (--text-color);
-    text-align: center;
 }
