--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ header {
     background-color: var(--header-bg-color);
     border-bottom: 1px solid var(--grey);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
 }
 
 .header-top {
@@ -78,7 +82,7 @@ header {
 
 .header-icon i {
     font-size: 24px;
-    color: var(--dark-text-color); /* Changed to black */
+    color: #333; /* Changed to dark grey */
 }
 
 .header-icon {
@@ -103,6 +107,10 @@ header {
     background-color: var(--white);
     border-bottom: 1px solid var(--grey);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    top: 64px; /* Adjust this value if header-top height changes */
+    z-index: 1000;
 }
 
 .navbar ul {
@@ -137,8 +145,47 @@ header {
     color: var(--primary-color);
 }
 
+.navbar ul li ul.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: var(--white);
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(52, 51, 51, 0.2);
+    z-index: 1;
+}
+
+.navbar ul li ul.dropdown-content li {
+    padding: 12px 16px;
+}
+
+.navbar ul li ul.dropdown-content li a {
+    color: var(--text-color);
+    text-decoration: none;
+    display: block;
+}
+
+.navbar ul li ul.dropdown-content li ul {
+    display: none;
+}
+
+.navbar ul li ul.dropdown-content li:hover ul {
+    display: block;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: var (--white);
+    min-width: 200px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.navbar ul li:hover ul.dropdown-content {
+    display: block;
+}
+
 main {
-    padding: 30px;
+    padding: 100px 30px 30px 30px; /* Add top padding to compensate for fixed header and navbar */
 }
 
 .trending {
