--- a/styles.css
+++ b/styles.css
@@ -245,18 +245,31 @@ main {
 
 .product button {
     /* background-color: var(---coslor); */
-    color: var(--white);
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+   
+        background-color: #028a3d; /* Green */
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        /* transition: background-color 0.3s, transform 0.3s; Added transform for animation */
+   
+    
+
+    /* color: var(--white); */
+    /* border: none; */
+    /* padding: 10px 20px; */
+    /* border-radius: 5px; */
+    /* cursor: pointer; */
+    /* transition: background-color 0.3s; */
 }
 
-/* .product button:hover { */
-    /* background-color: var(--button-hover-bg-color); */
-/* } */
-/*  */
+.product button:hover {
+        background-color: #026934; /* Darker green for hover */
+        transform: scale(1.05); /* Slight zoom effect on hover */
+    
+}
+
 .heart-button {
     background: var(--white);
     border: 2px solid var(--primary-color);
@@ -472,19 +485,29 @@ footer {
 }
 
 button {
-    padding: 12px 25px;
-    font-size: 1em;
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+        background-color: #028a3d; /* Green */
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s, transform 0.3s; /* Added transform for animation */
+    
+
+
+    /* padding: 12px 25px; */
+    /* font-size: 1em; */
+    /* background-color: var(--primary-color); */
+    /* color: white; */
+    /* border: none; */
+    /* border-radius: 5px; */
+    /* cursor: pointer; */
     /* transition: background-color 0.3s; */
 }
 
 button:hover {
-    background-color: var(--button-hover-bg-color);
-}
+    background-color: #026934; /* Darker green for hover */
+    transform: scale(1.05); /* Slight zoom effect on hover */}
 
 .product-reviews {
     margin-top: 40px;
